--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
-    "styled-components": "^5.1.0"
+    "styled-components": "^5.1.0",
+    "typewriter-effect": "^2.13.0"
   },
   "scripts": {
     "start": "env-cmd -f env/.env.developement react-scripts start",
